# Databases_Postgres_Alembic

./: .env  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0f0337d8cbfe_add_age_column_to_users.py  390437a1e268_updated_task_table_again.py  4913f72b14f9_init.py  6e806d6e93bf_added_age_to_users_again.py  82687345a183_updated_schemas.py  8cd351411708_updated_task_table.py  ad1b16e9dec6_added_crud_on_the_tables.py  cfedd8c6f954_added_user_task_and_project_task_.py  ed66bd3bf9bc_added_user_task_and_project_task_.py  ee8fc2c9c9c7_given_relationship.py
app/: main.py
app/api/routes/: health.py  project.py  task.py  user.py
app/core/: config.py  database.py  mongo.py
app/db_mongo/: activity_collection.py.py
app/models/: __init__.py  membership_model.py  project_model.py  task_model.py  user_model.py
app/repositories/: project_repo.py  task_repo.py  user_repo.py
app/schemas/: project_schema.py  task_schema.py  user_schema.py
app/services/: project_service.py  task_service.py  user_service.py
infra/: docker-compose.db.yml
