[project]
name = "database"
version = "0.1.0"
description = ""
authors = [
    {name = "Pratham Adhikari",email = "adjikaripratham44@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
